--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -12,6 +12,14 @@
 		"all": "Alle",
 		"my": "Meine"
 	},
+	"labels": {
+		"vegetarian": "vegetarisch",
+		"vegan": "vegan",
+		"eco": "Klimaessen",
+		"bio": "Bio",
+		"msc": "aus nachhaltigem Fischbestand",
+		"additives": "Zusatzstoffe"
+	},
 	"prices": {
 		"category": "Preiskategorie",
 		"desc_1": "Gilt für Studierende der Berliner Hochschulen, für die das studierendenWERK BERLIN zuständig ist.",
@@ -24,7 +32,9 @@
 		"back": "Zurück",
 		"add": "Hinzufügen",
 		"remove": "Entfernen",
-		"search": "Suchen"
+		"search": "Suchen",
+		"got_it": "Okay",
+		"done": "Fertig"
 	},
 	"state": {
 		"loading": "Laden",
@@ -52,8 +62,16 @@
 		"ends": "endet",
 		"ended": "endete"
 	},
+	"settings": {
+		"search_and_hightlight": "Suchen und Hervorheben",
+		"mensa_selector": "Mensen suchen, entfernen und verschieben"
+	},
 	"setup": {
-		"intro_highlights": "M kann nach Essen suchen und es hervorheben, wenn ein bestimmtes Wort vorkommt",
-		"intro_prices": "Wähle aus welche Preiskategorie auf dich zutrifft"
+		"intro_highlights": "M kann nach Essen hervorheben, wenn ein bestimmtes Wort im Namen vorkommt.",
+		"intro_prices": "Wähle aus welche Preiskategorie auf dich zutrifft",
+		"only_minutes": "Wir brauchen nur zwei Minuten",
+		"howto_1": "Wähle Mensen, Cafeterien und Coffeebars aus die Du häufig besuchst",
+		"howto_2": "Mach eine von ihnen zu deinem Favoriten",
+		"howto_3": "Ändere die Reihenfolge wenn du magst"
 	}
 }
