--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -49,7 +49,7 @@
 	},
 	"food": {
 		"pizza": "Pizza",
-		"cake": "Torte",
+		"cake": "Kuchen",
 		"spaetzle": "Spätzle",
 		"risotto": "Risotto",
 		"brownie": "Brownie"
@@ -70,8 +70,8 @@
 		"intro_highlights": "M kann nach Essen hervorheben, wenn ein bestimmtes Wort im Namen vorkommt.",
 		"intro_prices": "Wähle aus welche Preiskategorie auf dich zutrifft",
 		"only_minutes": "Wir brauchen nur zwei Minuten",
-		"howto_1": "Wähle Mensen, Cafeterien und Coffeebars aus die Du häufig besuchst",
+		"howto_1": "Wähle Mensen, Cafeterien und Coffeebars aus die du häufig besuchst",
 		"howto_2": "Mach eine von ihnen zu deinem Favoriten",
-		"howto_3": "Ändere die Reihenfolge wenn du magst"
+		"howto_3": "Ändere die Reihenfolge, wenn du magst"
 	}
 }
