--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -43,6 +43,7 @@
 	},
 	"result": {
 		"noresults_headline": "no results.",
+		"none": "keine",
 		"noresults_quote": "Die Magische Miesmuschel hat gesprochen!",
 		"loaderror_explain": "Es ist ein fehler beim Laden aufgetreten",
 		"error_shoutouts": ["Oh my Glob!", "UNACCEPTABLE!", "Shmowzow!", "What the cabbage?!", "Oh Lumps.", "What the flip, man?"]
@@ -58,7 +59,7 @@
 		"opens": "öffnet",
 		"closes": "geöffnet bis",
 		"closed": "geschlossen",
-		"starts": "startet",
+		"starts": "beginnt",
 		"ends": "endet",
 		"ended": "endete"
 	},
