Added server side support for Personalkantine TU and added translations

--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -18,6 +18,8 @@
 		"eco": "Klimaessen",
 		"bio": "Bio",
 		"msc": "aus nachhaltigem Fischbestand",
+		"lightfood": "Schonkost",
+		"corned": "gepökelt",
 		"additives": "Zusatzstoffe"
 	},
 	"prices": {
