--- a/mclient/src/i18n/en.json
+++ b/mclient/src/i18n/en.json
@@ -18,6 +18,8 @@
 		"eco": "climate-friendly",
 		"bio": "organic",
 		"msc": "from sustainable fish stocks",
+		"lightfood": "light food",
+		"corned": "corned",
 		"additives": "additives"
 	},
 	"prices": {
