Server now evaluates and Sends Date when Mensa will open next; Client uses this to instantly fetch; Datepicker implemented; Client got ToDo.txt

--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -46,8 +46,8 @@
 	"result": {
 		"noresults_headline": "no results.",
 		"none": "keine",
-		"noresults_quote": "Die Magische Miesmuschel hat gesprochen!",
 		"loaderror_explain": "Es ist ein fehler beim Laden aufgetreten",
+		"noresults_explain": "Die Suche hat keine Treffer ergeben",
 		"error_shoutouts": ["Oh my Glob!", "UNACCEPTABLE!", "Shmowzow!", "What the cabbage?!", "Oh Lumps.", "What the flip, man?"]
 	},
 	"food": {
