Added ToDo; Reversed CacheFetch change

--- a/mclient/todo.txt
+++ b/mclient/todo.txt
@@ -8,6 +8,7 @@ Release 1.0
 ✘	Word Tags
 ✘	Feedback
 ✘	Aria-Tags
+✘	Textfelder grau wenn deaktiviert
 ?	Bug beim verschieben in mobile
 
 Release 1.1
