Windows Support; Action Buttons; ChipsField; Highlights, menuSection, more...
+ Action Buttons: Now have support for textbuttons
+ Action Buttons: One single Button can be updated
+ ChipsField: Now supports Lowercase-Arrays
+ FoodItem: Now has support for highlighted from SingleMensa
+ SingleMensa:
+ Footer: Support for iPhone X
+ Header: Added Flexboxes for small screens and iOS Safari
+ Template: Added iOS-CSS Line for smooth scrolling
+ i18n: Added translations for new menuSection-Format
+ Index.ejs: Added rule so app is not scaleable. Without iOS makes weird things.
+ Settings: reflecting chipsfield update.
+ Setup: reflecting chipsfield update. iPhone X support.
+ SingleMensa: Relfects DatePicker and new menuSection-Format Changes and looks for highlightes words.
+ HtmlWebpackPlugin: Creates Hash in index.html for cache busting.

Server: Implemented menuSection-Format and removed time-bug

~ MensaSelector: Now calls updateStorage() when the order is changed.
~ DatePicker: Distinguishes between String and actual Date update to save reloads

--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -12,6 +12,15 @@
 		"all": "Alle",
 		"my": "Meine"
 	},
+	"menuSection": {
+		"appetizers": "Vorspeisen",
+		"salads": "Salate",
+		"soups": "Suppen",
+		"promotions": "Aktionen",
+		"maindishes": "Essen",
+		"sidedishes": "Beilagen",
+		"desserts": "Desserts"
+	},
 	"labels": {
 		"vegetarian": "vegetarisch",
 		"vegan": "vegan",
