--- a/mclient/todo.txt
+++ b/mclient/todo.txt
@@ -10,6 +10,7 @@ Release 1.0
 ✘	Aria-Tags
 ✓	Momentum
 ✘	Textfelder grau wenn deaktiviert
+✘	What is this (Google)?
 
 ✓	Bug beim verschieben in mobile
 ✘	iPhone Render Bug
