--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -63,7 +63,7 @@
 	"result": {
 		"noresults_headline": "no results.",
 		"none": "keine",
-		"loaderror_explain": "Es ist ein fehler beim Laden aufgetreten",
+		"loaderror_explain": "Es ist ein Fehler beim Laden aufgetreten",
 		"noresults_explain": "Die Suche hat keine Treffer ergeben",
 		"error_shoutouts": ["Oh my Glob!", "UNACCEPTABLE!", "Shmowzow!", "What the cabbage?!", "Oh Lumps.", "What the flip, man?"]
 	},
