--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -33,7 +33,8 @@
 		"msc": "aus nachhaltigem Fischbestand",
 		"lightfood": "Schonkost",
 		"corned": "gepökelt",
-		"additives": "Zusatzstoffe"
+		"additives": "Zusatzstoffe",
+		"everything": "alles"
 	},
 	"prices": {
 		"category": "Preiskategorie",
@@ -59,6 +60,9 @@
 		"optional": "optional",
 		"open": "offen",
 		"closed": "geschlossen"
+	},
+	"input": {
+		"keyword": "Stichwort"
 	},
 	"result": {
 		"noresults_headline": "no results.",
@@ -86,7 +90,9 @@
 		"search_and_hightlight": "Suchen und Hervorheben",
 		"mensa_selector": "Mensen suchen, entfernen und verschieben",
 		"custom_order": "Benutzerdefinierte Reihenfolge",
-		"customize": "Anpassen"
+		"customize": "Anpassen",
+		"dietarypreferences": "Ernährungsvorlieben",
+		"hideadditives": "Zusatzstoffe ausblenden"
 	},
 	"setup": {
 		"intro_highlights": "M kann nach Essen hervorheben, wenn ein bestimmtes Wort im Namen vorkommt.",
