--- a/mclient/src/i18n/en.json
+++ b/mclient/src/i18n/en.json
@@ -33,7 +33,8 @@
 		"msc": "from sustainable fish stocks",
 		"lightfood": "light food",
 		"corned": "corned",
-		"additives": "additives"
+		"additives": "additives",
+		"everything": "everything"
 	},
 	"prices": {
 		"category": "Price category",
@@ -59,6 +60,9 @@
 		"optional": "optional",
 		"open": "open",
 		"closed": "closed"
+	},
+	"input": {
+		"keyword": "Keyword"
 	},
 	"result": {
 		"noresults_headline": "keine Ergebnisse.",
@@ -86,7 +90,9 @@
 		"search_and_hightlight": "Search and Highlight",
 		"mensa_selector": "Find, remove and move Mensas",
 		"custom_order": "Custom Order",
-		"customize": "Customize"
+		"customize": "Customize",
+		"dietarypreferences": "Dietary Preferences",
+		"hideadditives": "hide additives"
 	},
 	"setup": {
 		"intro_highlights": "M can highlight food for you if a certain word occurs in it's name.",
