--- a/mclient/todo.txt
+++ b/mclient/todo.txt
@@ -1,6 +1,7 @@
 Immediate
 ✘	Feedback/Bug Report
 ~	Setup
+✘	Personalkantine braucht Vegan-Label
 
 ✘	Ladeanimation für zusatzstoffe
 ✘	Fehlermeldung für alles in SingleMensa
