--- a/mclient/src/i18n/en.json
+++ b/mclient/src/i18n/en.json
@@ -66,7 +66,7 @@
 		"successful": "successful"
 	},
 	"input": {
-		"keyword": "Keyword"
+		"keyword": "Enter keyword"
 	},
 	"result": {
 		"noresults_headline": "keine Ergebnisse.",
