--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -66,7 +66,7 @@
 		"successful": "erfolgreich"
 	},
 	"input": {
-		"keyword": "Stichwort"
+		"keyword": "Stichwort eingeben"
 	},
 	"result": {
 		"noresults_headline": "no results.",
@@ -100,7 +100,7 @@
 		"custom_order": "Benutzerdefinierte Reihenfolge",
 		"customize": "Anpassen",
 		"dietarypreferences": "Ernährungsvorlieben",
-		"hideadditives": "Zusatzstoffe ausblenden",
+		"hideadditives": "Zusatzstoffe ausfiltern",
 		"transport": "Einstellungen exportieren/importieren",
 		"transport_info": "Zu importierenden code hier platzieren..."
 	},
