Minor changes to Lang-Files

--- a/mclient/src/i18n/de.json
+++ b/mclient/src/i18n/de.json
@@ -90,7 +90,7 @@
 		"brownie": "Brownie"
 	},
 	"highlights": {
-		"description": "Alle Gerichte der ersten vier Mensen und Cafeterien, die mit Deinen Stichwörtern übereinstimmen werden hier angezeigt."
+		"description": "Alle Gerichte, die mit deinen Stichwörtern der ersten vier Mensen und Cafeterien übereinstimmen, werden hier angezeigt."
 	},
 	"times": {
 		"opens": "öffnet",
